--- a/admin/config.yml
+++ b/admin/config.yml
@@ -21,7 +21,7 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Cover_wide", name: "cover_wide", widget: "image", optional: true}
       - {label: "Cover_square", name: "cover_square", widget: "image", optional: true}
-      - {label: "Featured", name: "featured", widget: "boolean"}
+      - {label: "Featured", name: "featured", widget: "boolean", default: false}
       - {label: "Ingress", name: "ingress", widget: "text", optional: true}
       - {label: "Body", name: "body", widget: "markdown"}
       - {label: "Publish Date", name: "date", widget: "datetime", format: "YYYY-MM-DD"}
