--- a/admin/config.yml
+++ b/admin/config.yml
@@ -19,9 +19,9 @@ collections:
     fields:
       - {label: "Layout", name: "layout", widget: "hidden", default: "News"}
       - {label: "Title", name: "title", widget: "string"}
-      - {label: "Cover_wide", name: "cover_wide", widget: "image", optional: true}
-      - {label: "Cover_square", name: "cover_square", widget: "image", optional: true}
-      - {label: "Ingress", name: "ingress", widget: "text", optional: true}
+      - {label: "Cover_wide", name: "cover_wide", widget: "image", required: false}
+      - {label: "Cover_square", name: "cover_square", widget: "image", required: false}
+      - {label: "Ingress", name: "ingress", widget: "text", required: false}
       - {label: "Body", name: "body", widget: "markdown"}
       - {label: "Publish Date", name: "date", widget: "datetime", format: "YYYY-MM-DD"}
 
