added PropTypes module

--- a/package.json
+++ b/package.json
@@ -132,6 +132,7 @@
     "whatwg-fetch": "^0.11.0"
   },
   "dependencies": {
-    "axios": "^0.16.2"
+    "axios": "^0.16.2",
+    "prop-types": "^15.5.10"
   }
 }
