--- a/admin/config.yml
+++ b/admin/config.yml
@@ -37,4 +37,17 @@ collections:
       - {label: "Layout", name: "layout", widget: "string", default: "Page"}
       - {label: "Header", name: "header", widget: "image", optional: true}
       - {label: "Body", name: "body", widget: "markdown"}
- 
+
+ - name: "fair-info"
+    label: "Fair Info"
+    folder: "content/fair-info"
+    create: true
+    slug: "{{slug}}"
+    card: {type: "alltype", text: "title"}
+    fields:
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Layout", name: "layout", widget: "string", default: "Fair_info"}
+      - {label: "Priority", name: "priority", widget: "number"}
+      - {label: "Header", name: "header", widget: "image", optional: true}
+      - {label: "Body", name: "body", widget: "markdown"}
+
