--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "homepage": "http://mdwp-phenomic.netlify.com",
   "twitter": "mdwp",
   "repository": "https://github.com/capriosa/mdwp-phenomic",
-  "googleAnalyticsUA": "UA-107526633-1",
+  "googleAnalytics": "UA-107526633-1",
   "scripts": {
     "lint:js": "eslint --ignore-path .gitignore --fix .",
     "lint:css": "stylelint \"src/**/*.css\"",
