Revert "Google analytics implementation" incorrect implementation
This reverts commit 31feb6cf45a7fa0fe3c9b63a10835532ceda5b72.

--- a/package.json
+++ b/package.json
@@ -133,7 +133,6 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
-    "prop-types": "^15.5.10",
-    "react-ga": "^2.3.5"
+    "prop-types": "^15.5.10"
   }
 }
