--- a/package.json
+++ b/package.json
@@ -133,6 +133,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
-    "prop-types": "^15.5.10"
+    "prop-types": "^15.5.10",
+    "react-sticky": "^6.0.1"
   }
 }
