fair-info => exhibitor-info

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -38,15 +38,15 @@ collections:
       - {label: "Header", name: "header", widget: "image", optional: true}
       - {label: "Body", name: "body", widget: "markdown"}
 
-  - name: "fair-info"
-    label: "Fair Info"
-    folder: "content/fair-info"
+  - name: "exhibitor-info"
+    label: "Exhibitor Info"
+    folder: "content/exhibitor-info"
     create: true
     slug: "{{slug}}"
     card: {type: "alltype", text: "title"}
     fields:
       - {label: "Title", name: "title", widget: "string"}
-      - {label: "Layout", name: "layout", widget: "string", default: "Fair_info"}
+      - {label: "Layout", name: "layout", widget: "string", default: "Exhibitor_info"}
       - {label: "Priority", name: "priority", widget: "number"}
       - {label: "Header", name: "header", widget: "image", optional: true}
       - {label: "Dark Background", name: "dark", widget: "boolean", default: false}
