--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,7 +1,7 @@
 backend:
   name: github
   repo: armada-ths/armada.nu
-  branch: webtest
+  branch: master
 
 public_folder: "/assets"
 media_folder: "content/assets"
