--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
     "babel-preset-react-optimize": "^1.0.1",
     "babel-preset-stage-2": "^6.22.0",
     "classnames": "^2.2.5",
-    "copy-webpack-plugin": "^4.1.0",
+    "copy-webpack-plugin": "^4.1.1",
     "css-loader": "^0.28.0",
     "eslint": "^3.7.1",
     "eslint-loader": "^1.7.1",
@@ -119,7 +119,7 @@
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
     "react-helmet": "^3.0.0",
-    "react-hot-loader": "^3.0.0-beta",
+    "react-hot-loader": "^3.0.0",
     "react-redux": "^4.0.0",
     "react-router": "^2.3.0",
     "react-svg-inline": "^1.1.0",
