--- a/package.json
+++ b/package.json
@@ -134,6 +134,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "moment": "^2.19.1",
     "prop-types": "^15.6.0",
     "react-google-analytics": "^0.2.0",
     "react-sticky": "^6.0.1"
