--- a/package.json
+++ b/package.json
@@ -137,6 +137,7 @@
     "moment": "^2.19.1",
     "prop-types": "^15.6.0",
     "react-google-analytics": "^0.2.0",
+    "react-page-click": "^4.0.2",
     "react-sticky": "^6.0.1"
   }
 }
