--- a/package.json
+++ b/package.json
@@ -136,6 +136,7 @@
     "axios": "^0.16.2",
     "moment": "^2.19.1",
     "prop-types": "^15.6.0",
+    "query-string": "^5.0.0",
     "react-google-analytics": "^0.2.0",
     "react-page-click": "^4.0.2",
     "react-sticky": "^6.0.1"
