--- a/admin/config.yml
+++ b/admin/config.yml
@@ -13,6 +13,7 @@ collections:
     label: "News"
     folder: "content/news"
     create: true
+    delete: true
     sort: "date:desc" # Default is title:asc
     slug: "{{slug}}"
     card: {type: "alltype", text: "title"}
@@ -30,6 +31,7 @@ collections:
     label: "Pages"
     folder: "content"
     create: true
+    delete: true
     slug: "{{slug}}"
     card: {type: "alltype", text: "title"}
     fields:
@@ -44,6 +46,7 @@ collections:
     label: "Exhibitor Info"
     folder: "content/exhibitor-info"
     create: true
+    delete: true
     slug: "{{slug}}"
     card: {type: "alltype", text: "title"}
     fields:
@@ -53,4 +56,3 @@ collections:
       - {label: "Header", name: "header", widget: "image", optional: true}
       - {label: "Dark Background", name: "dark", widget: "boolean", default: false}
       - {label: "Body", name: "body", widget: "markdown"}
-
