test showdelete flag

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -7,6 +7,7 @@ public_folder: "/assets"
 media_folder: "content/assets"
 publish_mode: editorial_workflow
 delete: true
+showdelete: true
 
 
 collections:
