test to remove editorial workflow

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -5,7 +5,7 @@ backend:
 
 public_folder: "/assets"
 media_folder: "content/assets"
-publish_mode: editorial_workflow
+publish_mode: simple
 delete: true
 showdelete: true
 
