--- a/admin/config.yml
+++ b/admin/config.yml
@@ -5,7 +5,7 @@ backend:
 
 public_folder: "/assets"
 media_folder: "content/assets"
-publish_mode: simple
+publish_mode: editorial_workflow
 
 
 collections:
