--- a/admin/config.yml
+++ b/admin/config.yml
@@ -38,6 +38,7 @@ collections:
     fields:
       - {label: "Layout", name: "layout", widget: "hidden", default: "News"}
       - {label: "Title", name: "title", widget: "string"}
+      - {label: "Category", name: "category", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Cover_wide", name: "cover_wide", widget: "image", required: false}
       - {label: "Cover_square", name: "cover_square", widget: "image", required: false}
