Changed to react-leaflet-universal

--- a/package.json
+++ b/package.json
@@ -143,6 +143,7 @@
     "react-google-analytics": "^0.2.0",
     "react-google-maps": "^7.0.0",
     "react-leaflet": "^1.9.0",
+    "react-leaflet-universal": "^1.0.0",
     "react-page-click": "^4.0.2",
     "react-reveal": "^1.2.2",
     "react-select": "^2.1.0",
