--- a/admin/config.yml
+++ b/admin/config.yml
@@ -45,6 +45,7 @@ collections:
       - {label: "Featured", name: "featured", widget: "boolean", default: false}
       - {label: "Ingress", name: "ingress", widget: "text", required: false}
       - {label: "Body", name: "body", widget: "markdown"}
+      - {label: "Header", name: "header", widget: "image", required: false}
 
   - name: "pages"
     label: "Pages"
