--- a/package.json
+++ b/package.json
@@ -137,6 +137,7 @@
     "chart.js": "^1.1.1",
     "leaflet": "^1.5.1",
     "moment": "^2.19.1",
+    "npm": "^3.10.3",
     "prop-types": "^15.6.0",
     "react-chartjs": "^1.2.0",
     "react-collapsible": "^2.6.0",
