--- a/admin/config.yml
+++ b/admin/config.yml
@@ -42,7 +42,7 @@ collections:
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Cover_wide", name: "cover_wide", widget: "image", required: false}
       - {label: "Cover_square", name: "cover_square", widget: "image", required: false}
-      - {label: "Featured", name: "featured", widget: "boolean", default: false}
+      - {label: "Archived", name: "archived", widget: "boolean", default: false}
       - {label: "Ingress", name: "ingress", widget: "text", required: false}
       - {label: "Body", name: "body", widget: "markdown"}
       - {label: "Header", name: "header", widget: "image", required: false}
