--- a/admin/config.yml
+++ b/admin/config.yml
@@ -40,6 +40,7 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Category", name: "category", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
+      - {label: "Display date", name: "display_date", widget: "boolean", default: true}
       - {label: "Cover_wide", name: "cover_wide", widget: "image", required: false}
       - {label: "Cover_square", name: "cover_square", widget: "image", required: false}
       - {label: "Archived", name: "archived", widget: "boolean", default: false}
