--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "gatsby": "^2.22.15",
     "gatsby-image": "^2.4.5",
+    "gatsby-plugin-google-analytics": "^2.3.4",
     "gatsby-plugin-manifest": "^2.4.9",
     "gatsby-plugin-netlify-cms": "^4.3.5",
     "gatsby-plugin-offline": "^3.2.7",
