--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,7 +1,7 @@
 backend:
   name: github
   repo: armada-ths/armada.nu
-  branch: gatsby-migration
+  branch: master
 
 public_folder: "/assets"
 media_folder: "static/assets"
