--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@mdx-js/mdx": "^1.6.16",
+    "@mdx-js/react": "^1.6.16",
     "gatsby": "^2.22.15",
     "gatsby-image": "^2.4.5",
+    "gatsby-plugin-feed-mdx": "^1.0.1",
     "gatsby-plugin-google-analytics": "^2.3.4",
     "gatsby-plugin-manifest": "^2.4.9",
+    "gatsby-plugin-mdx": "^1.2.36",
     "gatsby-plugin-netlify-cms": "^4.3.5",
     "gatsby-plugin-offline": "^3.2.7",
     "gatsby-plugin-react-helmet": "^3.3.2",
