--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-source-filesystem": "^2.3.11",
     "gatsby-transformer-remark": "^2.8.15",
     "gatsby-transformer-sharp": "^2.5.3",
+    "joi": "^17.4.2",
     "leaflet": "^1.6.0",
     "netlify-cms-app": "^2.14.26",
     "node-sass": "^4.14.1",
