--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -59,6 +59,9 @@ collections:
       - {label: "Layout", name: "layout", widget: "string", default: "Page"}
       - {label: "Description", name: "description", widget: "text", default: "Page"}
       - {label: "In menu", name: "menuPage", widget: "boolean", default: false}
+      - {label: "In Student dropdown", name: "studentSubpage", widget: "boolean", default: false}
+      - {label: "In Company dropdown", name: "companySubpage", widget: "boolean", default: false}
+      - {label: "In About dropdown", name: "aboutSubpage", widget: "boolean", default: false}
       - {label: "Priority", name: "priority", widget: "number"}
       - {label: "Header", name: "header", widget: "image", optional: true}
       - {label: "No Jumbotron", name: "noJumbotron", widget: "boolean", required: false, default: false}
