--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-transformer-sharp": "^2.5.3",
     "joi": "^17.4.2",
     "leaflet": "^1.6.0",
+    "link-react": "^3.0.0",
     "netlify-cms-app": "^2.14.26",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
