--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@mailtop/horizontal-timeline": "^2.1.4",
     "@mdx-js/mdx": "^1.6.16",
     "@mdx-js/react": "^1.6.16",
     "gatsby": "^2.22.15",
@@ -32,9 +33,12 @@
     "react-device-detect": "^1.13.1",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
+    "react-icons": "^4.3.1",
     "react-leaflet": "^2.7.0",
     "react-loadable": "^5.5.0",
+    "react-markdown": "^7.1.0",
     "react-page-click": "^4.0.4",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-player": "^2.9.0",
     "react-reveal": "^1.2.2",
     "react-select": "^3.1.0",
