--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mailtop/horizontal-timeline": "^2.1.4",
     "@mdx-js/mdx": "^1.6.16",
     "@mdx-js/react": "^1.6.16",
+    "bootstrap": "^5.1.3",
     "gatsby": "^2.22.15",
     "gatsby-image": "^2.4.5",
     "gatsby-plugin-feed-mdx": "^1.0.1",
@@ -29,6 +30,7 @@
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-bootstrap": "^2.0.2",
     "react-countdown-now": "^2.1.2",
     "react-device-detect": "^1.13.1",
     "react-dom": "^16.12.0",
