--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-leaflet": "^2.7.0",
     "react-loadable": "^5.5.0",
     "react-markdown": "^7.1.0",
+    "react-modal": "^3.14.4",
     "react-page-click": "^4.0.4",
     "react-perfect-scrollbar": "^1.5.8",
     "react-player": "^2.9.0",
