--- a/package.json
+++ b/package.json
@@ -5,57 +5,65 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "@mdx-js/mdx": "^2.3.0",
-    "@mdx-js/react": "^2.3.0",
-    "@staticcms/core": "^1.2.12",
-    "bootstrap": "^5.2.3",
-    "flag": "^5.0.1",
-    "gatsby": "^5.7.0",
-    "gatsby-plugin-google-analytics": "^5.7.0",
-    "gatsby-plugin-image": "^3.7.0",
-    "gatsby-plugin-manifest": "^5.7.0",
-    "gatsby-plugin-mdx": "^5.7.0",
-    "gatsby-plugin-sass": "^6.7.0",
-    "gatsby-plugin-sharp": "^5.7.0",
-    "gatsby-plugin-static-cms": "^1.1.2",
-    "gatsby-source-filesystem": "^5.7.0",
-    "gatsby-transformer-remark": "^6.7.0",
-    "gatsby-transformer-sharp": "^5.7.0",
-    "joi": "^17.8.3",
-    "leaflet": "^1.9.3",
-    "node-sass": "^8.0.0",
-    "perfect-scrollbar": "^1.5.5",
-    "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-awesome-reveal": "^4.2.3",
-    "react-bootstrap": "^2.7.2",
-    "react-countdown": "^2.3.5",
-    "react-device-detect": "^2.2.3",
-    "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0",
-    "react-icons": "^4.7.1",
-    "react-leaflet": "^4.2.1",
+    "@mailtop/horizontal-timeline": "^2.1.4",
+    "@mdx-js/mdx": "^1.6.16",
+    "@mdx-js/react": "^1.6.16",
+    "bootstrap": "^5.1.3",
+    "flag": "^4.4.0",
+    "gatsby": "^2.22.15",
+    "gatsby-image": "^2.4.5",
+    "gatsby-plugin-feed-mdx": "^1.0.1",
+    "gatsby-plugin-google-analytics": "^2.3.4",
+    "gatsby-plugin-manifest": "^2.4.9",
+    "gatsby-plugin-mdx": "^1.2.36",
+    "gatsby-plugin-netlify-cms": "^4.10.0",
+    "gatsby-plugin-offline": "^3.2.7",
+    "gatsby-plugin-react-helmet": "^3.3.2",
+    "gatsby-plugin-sass": "^2.3.4",
+    "gatsby-plugin-sharp": "^2.6.9",
+    "gatsby-source-filesystem": "^2.3.11",
+    "gatsby-transformer-remark": "^2.8.15",
+    "gatsby-transformer-sharp": "^2.5.3",
+    "joi": "^17.4.2",
+    "leaflet": "^1.6.0",
+    "link-react": "^3.0.0",
+    "netlify-cms-app": "^2.14.26",
+    "node-sass": "^4.14.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.12.0",
+    "react-bootstrap": "^2.0.2",
+    "react-countdown-now": "^2.1.2",
+    "react-device-detect": "^1.13.1",
+    "react-dom": "^16.12.0",
+    "react-helmet": "^6.0.0",
+    "react-icons": "^4.3.1",
+    "react-leaflet": "^2.7.0",
     "react-loadable": "^5.5.0",
-    "react-markdown": "^8.0.5",
-    "react-modal": "^3.16.1",
-    "react-player": "^2.11.2",
-    "react-select": "^5.7.0",
+    "react-markdown": "^7.1.0",
+    "react-modal": "^3.14.4",
+    "react-page-click": "^4.0.4",
+    "react-perfect-scrollbar": "^1.5.8",
+    "react-player": "^2.9.0",
+    "react-reveal": "^1.2.2",
+    "react-select": "^3.1.0",
     "react-sticky": "^6.0.3",
-    "react-topbar-progress-indicator": "^4.1.1",
-    "rehype-raw": "^6.1.1"
+    "react-topbar-progress-indicator": "^4.1.0",
+    "react-typeform-embed": "^0.2.1",
+    "react-url-query": "^1.5.0"
   },
   "devDependencies": {
-    "prettier": "^2.8.4"
+    "@hot-loader/react-dom": "^16.13.0",
+    "prettier": "2.0.5"
   },
   "keywords": [
     "gatsby"
   ],
-  "license": "0BSD",
+  "license": "MIT",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,css}\"",
-    "start": "gatsby develop",
+    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
@@ -66,9 +74,5 @@
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
-  },
-  "engines": {
-    "npm": ">=9.0.0",
-    "node": ">=18.0.0"
   }
 }
