--- a/.github/workflows/Llnt.yml
+++ b/.github/workflows/Llnt.yml
@@ -1,24 +1,22 @@
 name: Lint
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+    push:
+        branches:
+            - main
+    pull_request:
 
 jobs:
-  lint:
-    runs-on: ubuntu-latest
+    lint:
+        runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js
-        uses: actions/setup-node@v1
-        with:
-          node-version: "18.x"
-      - name: Install dependencies
-        run: npm install
-      - name: Lint code
-        run: npm run lint
+        steps:
+            - uses: actions/checkout@v2
+            - name: Use Node.js
+              uses: actions/setup-node@v1
+              with:
+                  node-version: '18.x'
+            - name: Install dependencies
+              run: npm install
+            - name: Lint code
+              run: npm run lint
