--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.3",
     "react-bootstrap": "^2.7.2",
+    "react-collapsible": "^2.10.0",
     "react-countdown": "^2.3.5",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
