--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-countdown": "^2.3.5",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.7.1",
     "react-leaflet": "^4.2.1",
