--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.7.1",
     "react-leaflet": "^4.2.1",
+    "react-leaflet-cluster": "^2.1.0",
     "react-loadable": "^5.5.0",
     "react-markdown": "^8.0.5",
     "react-modal": "^3.16.1",
