--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-modal": "^3.16.1",
     "react-player": "^2.11.2",
     "react-select": "^5.7.0",
+    "react-spring": "^9.7.2",
     "react-sticky": "^6.0.3",
     "react-topbar-progress-indicator": "^4.1.1",
     "rehype-raw": "^6.1.1"
