--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mdx-js/mdx": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@staticcms/core": "^1.2.12",
+    "@uiball/loaders": "^1.3.0",
     "bootstrap": "^5.2.3",
     "browser-monads": "^1.0.0",
     "flag": "^5.0.1",
