--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "react-spring": "^9.7.2",
     "react-sticky": "^6.0.3",
     "react-topbar-progress-indicator": "^4.1.1",
-    "rehype-raw": "^6.1.1"
+    "rehype-raw": "^6.1.1",
+    "survey-react-ui": "^1.9.111"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
