--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,6 @@
   "singleQuote": true,
   "jsxSingleQuote": true,
   "tabWidth": 4,
-  "trailingComma": "es5"
+  "trailingComma": "es5",
+  "quoteProps": "consistent"
 }
