--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,5 @@
   "singleQuote": true,
   "jsxSingleQuote": true,
   "tabWidth": 4,
-  "trailingComma": "es5",
-  "quoteProps": "consistent"
+  "trailingComma": "es5"
 }
