--- a/package.json
+++ b/package.json
@@ -53,8 +53,10 @@
     "rehype-raw": "^6.1.1"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.7",
     "eslint": "^7.32.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "gatsby-plugin-root-import": "^2.0.9",
     "prettier": "^2.8.4"
   },
   "keywords": [
