--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.7",
+    "@types/react-dom": "^18.2.14",
     "eslint": "^7.32.0",
     "eslint-plugin-prettier": "^4.2.1",
     "gatsby-plugin-root-import": "^2.0.9",
