--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   "devDependencies": {
     "@types/leaflet": "^1.9.7",
     "@types/react-dom": "^18.2.14",
+    "@types/react-modal": "^3.16.3",
     "eslint": "^7.32.0",
     "eslint-plugin-prettier": "^4.2.1",
     "gatsby-plugin-root-import": "^2.0.9",
