--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@coreui/coreui": "^4.3.2",
     "@coreui/react": "^5.0.0-beta.1",
     "@loadable/component": "^5.15.3",
     "@mdx-js/mdx": "^2.3.0",
