--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@uidotdev/usehooks": "^2.4.1",
     "bootstrap": "^5.2.3",
     "browser-monads": "^1.0.0",
+    "browser-monads-ts": "^2.0.1",
     "flag": "^5.0.1",
     "fuse.js": "^7.0.0",
     "gatsby": "^5.7.0",
