--- a/package.json
+++ b/package.json
@@ -56,8 +56,7 @@
     "react-spring": "^9.7.2",
     "react-sticky": "^6.0.3",
     "react-topbar-progress-indicator": "^4.1.1",
-    "rehype-raw": "^6.1.1",
-    "survey-react-ui": "^1.9.111"
+    "rehype-raw": "^6.1.1"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.7",
