--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-plugin-sass": "^6.7.0",
     "gatsby-plugin-sharp": "^5.7.0",
     "gatsby-plugin-static-cms": "^1.1.2",
+    "gatsby-plugin-use-query-params": "^1.0.1",
     "gatsby-source-filesystem": "^5.7.0",
     "gatsby-transformer-remark": "^6.7.0",
     "gatsby-transformer-sharp": "^5.7.0",
@@ -56,7 +57,8 @@
     "react-spring": "^9.7.2",
     "react-sticky": "^6.0.3",
     "react-topbar-progress-indicator": "^4.1.1",
-    "rehype-raw": "^6.1.1"
+    "rehype-raw": "^6.1.1",
+    "use-query-params": "^2.2.1"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.7",
